--- a/manifest.json
+++ b/manifest.json
@@ -7,6 +7,11 @@
             "size": "192x192",
             "type":"image/png",
             "purpose": "any maskable"
+        },
+        {
+            "src": "./assets/icon-144.png",
+            "size": "144x144",
+            "type":"image/png"
         }
     ],
     "theme_color": "#FFFFFF",
