--- a/manifest.json
+++ b/manifest.json
@@ -18,5 +18,10 @@
     "background_color": "#FFFFFF",
     "start_url":  "/regPoint/",
     "display": "standalone",
-    "orientation": "portrait"
+    "orientation": "portrait",
+    "id": "regPoint",
+  "display_override": [
+    "window-controls-overlay"
+  ],
+  "description": "Registre aqui os horarios de Ponto e acompanhe de modo simples e intuitivo."
 }
