--- a/manifest.json
+++ b/manifest.json
@@ -6,12 +6,13 @@
             "src": "./assets/icon-192.png",
             "size": "192x192",
             "type":"image/png",
-            "purpose": "any maskable"
+            "purpose": "any"
         },
         {
             "src": "./assets/icon-144.png",
             "size": "144x144",
-            "type":"image/png"
+            "type":"image/png",
+            "purpose": "maskable"
         }
     ],
     "theme_color": "#FFFFFF",
