--- a/manifest.json
+++ b/manifest.json
@@ -9,6 +9,11 @@
             "purpose": "any"
         },
         {
+          "src": "./assets/icon-512.png",
+          "sizes": "512x512",
+          "type": "image/png"
+        },
+        {
             "src": "./assets/icon-144.png",
             "size": "144x144",
             "type":"image/png",
