--- a/manifest.json
+++ b/manifest.json
@@ -6,12 +6,18 @@
             "src": "./assets/icon-192.png",
             "size": "192x192",
             "type":"image/png",
-            "purpose": "any maskable"
+            "purpose": "any"
+        },
+        {
+          "src": "./assets/icon-512.png",
+          "sizes": "512x512",
+          "type": "image/png"
         },
         {
             "src": "./assets/icon-144.png",
             "size": "144x144",
-            "type":"image/png"
+            "type":"image/png",
+            "purpose": "maskable"
         }
     ],
     "theme_color": "#FFFFFF",
