--- a/manifest.json
+++ b/manifest.json
@@ -6,7 +6,7 @@
             "src": "./assets/icon-192.png",
             "size": "192x192",
             "type":"image/png",
-            "purpose": "any"
+            "purpose": "any maskable"
         },
         {
           "src": "./assets/icon-512.png",
@@ -16,8 +16,7 @@
         {
             "src": "./assets/icon-144.png",
             "size": "144x144",
-            "type":"image/png",
-            "purpose": "maskable"
+            "type":"image/png"
         }
     ],
     "theme_color": "#FFFFFF",
