--- a/manifest.json
+++ b/manifest.json
@@ -27,7 +27,7 @@
     "orientation": "portrait",
     "id": "regPoint",
   "display_override": [
-    "window-controls-overlay"
+    "fullscreen"
   ],
   "description": "Registre aqui os horarios de Ponto e acompanhe de modo simples e intuitivo."
 }
